--- a/DevProject/resources/css/index.css
+++ b/DevProject/resources/css/index.css
@@ -1,4 +1,5 @@
-* {
+/* pre 05/04/23 
+{
     font-family: Helvetica, Arial, sans-serif;
   }
    
@@ -17,3 +18,100 @@
   a {
     text-decoration: none;
   }
+  */
+  /* General styles */
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f7f7f7;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+h1 {
+  font-size: 36px;
+  margin-top: 0;
+  text-align: center;
+  color: #333;
+}
+
+p {
+  font-size: 18px;
+  line-height: 1.5;
+  color: #333;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+ul li {
+  margin-bottom: 10px;
+}
+
+a {
+  color: #333;
+}
+
+a:hover {
+  color: #666;
+}
+
+/* Header styles */
+header {
+  background-color: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+}
+
+header h1 {
+  font-size: 48px;
+  margin: 0;
+  text-align: center;
+  color: #333;
+}
+
+/* Footer styles */
+footer {
+  background-color: #333;
+  color: #fff;
+  padding: 10px;
+  text-align: center;
+}
+
+/* Media queries */
+@media (max-width: 767px) {
+  .container {
+    padding: 10px;
+  }
+  
+  header h1 {
+    font-size: 36px;
+  }
+  
+  p {
+    font-size: 16px;
+  }
+}
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
